Issue #64: Increased the width of the add exercise dialog. Removed the background under the text in exercise type thumbs and outlined the text to make it more readable.

--- a/app/assets/stylesheets/exerciseTypes/exerciseTypePanel.css
+++ b/app/assets/stylesheets/exerciseTypes/exerciseTypePanel.css
@@ -18,6 +18,7 @@
   margin: 2px;
   cursor: pointer;
   padding: 1px;
+  position: relative;
 }
 
 .exercise-type-panel .exercise-type-item .edit-btn {
@@ -46,23 +47,14 @@
   background: #f5f5f5;
 }
 
-.exercise-type-panel .exercise-type-item .name {
-  position: absolute;
-  width: 131px;
-  height: 55px;
-  margin-left: 1px;
-  margin-top: -56px;
-  display: flex;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  font-weight: bold;
-  border-radius: 3px;
-}
-
 .exercise-type-panel .exercise-type-item .name-text {
+  position: absolute;
   color: white;
   text-align: center;
   width: 100%;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  bottom: 1px;
+  font-weight: bold;
 }
 
 .exercise-type-panel .exercise-type-item .thumb {
